--- a/pages/styles.css
+++ b/pages/styles.css
@@ -15,16 +15,16 @@ body {
   margin-bottom: 3rem;
 
   /* Para que todo el aplicativo sea visible */
-  /* -webkit-transform: scale(0.8);
+  -webkit-transform: scale(0.8);
   -moz-transform: scale(0.8);
   -ms-transform: scale(0.8);
-  transform: scale(0.8); */
+  transform: scale(0.8);
 
-  /* Para que el contenido este centrado en x,y (50%, */
-  /* -ms-transform-origin: 50% 0;
+  /* Para que el contenido este centrado en x,y (50%,0) */
+  -ms-transform-origin: 50% 0;
   -webkit-transform-origin: 50% 0;
   -moz-transform-origin: 50% 0;
-  transform-origin: 50% 0; */
+  transform-origin: 50% 0;
 }
 
 #ventanagrafica {
@@ -43,14 +43,8 @@ body {
   background-color: transparent;
 }
 
-.column.iniciar-parar {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.column.iniciar-parar button {
-  margin-right: 1em;
+hr {
+  height: 1px;
 }
 
 .section {
@@ -59,78 +53,11 @@ body {
   padding: 0;
 }
 
-.w-100 {
-  width: 100%;
-}
-
-.d-inline {
-  display: inline !important;
-}
-
-.field.is-vertical {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.MathJax {
-  display: flex !important;
-}
-
-.Contenedor_ValoresFaseInicial {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-#canvasfaseinicial {
-  margin-top: 5px;
-}
-
-.valoresFaseInicial {
-  flex-direction: column;
-  align-items: flex-start;
-  justify-content: center;
-  margin-left: 50px;
-  min-width: 70px;
-}
-
-.UnidadesFaseInicial {
-  position: relative;
-  top: -5px;
-}
-
-.UnidadesFaseInicial .control {
-  display: flex;
-  align-items: center;
-}
-
-.FaseInicialGrados {
-  position: relative;
-  top: 4px;
-}
-
-.FrecuenciaPeriodo .MathJax,
-.TiempoPosicionVelocidadAceleracion .MathJax,
-.Energia .MathJax {
-  display: inline !important;
-}
-
-#frecuencia_oscilacion,
-#periodo_oscilacion {
-  min-width: 50px;
-  display: inline-block;
-}
-
 .Texto-Ayuda {
   z-index: 100;
   position: absolute;
   right: 20px;
   bottom: 0;
-}
-
-.Texto-Ayuda .MathJax {
-  display: inline !important;
 }
 
 .Texto-Ayuda-UL {
@@ -152,11 +79,6 @@ body {
   padding: 0;
   display: flex;
   justify-content: center;
-}
-
-.columns.VelocidadAnimacion button {
-  font-size: 0.5rem;
-  margin: 0 1rem;
 }
 
 /* Tooltip contenedor */
@@ -185,12 +107,4 @@ body {
 
 .tooltip:hover .tooltiptext {
   visibility: visible;
-}
-
-hr {
-  height: 1px;
-}
-
-.progress {
-  border-radius: 0 !important;
 }
