--- a/pages/styles.css
+++ b/pages/styles.css
@@ -28,8 +28,7 @@ body {
 }
 
 #ventanagrafica {
-  height: 380px;
-  /* width: 1000px; */
+  height: 400px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -53,20 +52,6 @@ hr {
 
 .katex-html {
   display: flex;
-}  
-
-
-.Texto-Ayuda {
-  z-index: 100;
-  position: absolute;
-  right: 20px;
-  bottom: 0;
-}
-
-.Texto-Ayuda-UL {
-  list-style: inherit;
-  margin: initial;
-  padding-left: 30px !important;
 }
 
 /* Tooltip contenedor */
@@ -74,6 +59,7 @@ hr {
   position: relative;
   display: inline-block;
   font-size: 16px;
+  width: 10px;
   font-weight: bold;
   border-bottom: 2px dotted #f14668 !important;
 }
