Agregar pagina en blanco de movimiento sobre amortiguado

--- a/pages/styles.scss
+++ b/pages/styles.scss
@@ -16,7 +16,8 @@ body {
   font-family: "Source Sans Pro", sans-serif;
 }
 
-.MovimientoArmonicoSimple {
+.MovimientoArmonicoSimple,
+.MovimientoSobreAmortiguado {
   align-items: center;
   min-height: 100vh;
   display: flex;
