Organizar menu de osciladores

--- a/pages/styles.scss
+++ b/pages/styles.scss
@@ -17,7 +17,7 @@ body {
 }
 
 .MovimientoArmonicoSimple,
-.MovimientoSobreAmortiguado {
+.MovimientoAmortiguado {
   align-items: center;
   min-height: 100vh;
   display: flex;
